--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://rjshoemaker55.github.io/dylanssite"
+  "homepage": "http://rjshoemaker55.github.io/survival-kits"
 }
